public/style.css
/* 

 .me {
  color: white;
  font-size: 3em;
  background-color: #2e4369;

}

.dev {
  color: white;
  font-size: 1.2em;
  padding-top: 30px;
  padding-bottom: 30px;
  background-color: #653213;

}

.ml3 {
  font-weight: 900;
  font-size: 3.5em;
  color: white;
  opacity: 0.6;
}

.container:hover {
  opacity: 0.9;
  filter: alpha(opacity=50);
}

#list-example a {
  background-color: #050024;
}

#ss {
  height: 150px;
  width: 150px;
  margin-left: 95px;
}

#trucker {
  height: 180px;
  width: 180px;
  margin-left: 75px;
}

.skillsPicture {
  max-width: 100%;
  min-width: 60px;
  height: 125px;
  object-fit: contain;
  padding: 10px;
  transition: transform .2s;
  margin-bottom: 10px;
}

.iconTransition {
  transition: transform .2s;
}

.iconTransition:hover {
  transition: transform .2s;
  transform: scale(1.5);
}

.skillsPicture:hover {
  transform: scale(1.5);
}

html,
body {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
}

.wrapper {
  display: table;
  height: 100%;
  width: 100%;
}

.container-fostrap {
  display: table-cell;
  padding: 1em;
  text-align: center;
  vertical-align: middle;
}

.fostrap-logo {
  width: 100px;
  margin-bottom: 15px
}

h1.heading {
  color: #fff;
  font-size: 1.15em;
  font-weight: 900;
  margin: 0 0 0.5em;
  color: #505050;
}

@media (min-width: 450px) {
  h1.heading {
    font-size: 3.55em;
  }
}

@media (min-width: 760px) {
  h1.heading {
    font-size: 3.05em;
  }
}

@media (min-width: 900px) {
  h1.heading {
    font-size: 3.25em;
    margin: 0 0 0.3em;
  }
}

.card {
  display: block;
  margin-bottom: 20px;
  line-height: 1.42857143;
  background-color: #fff;
  border-radius: 2px;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  transition: box-shadow .25s;
}

.card:hover {
  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.img-card {
  width: 100%;
  height: 200px;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  display: block;
  overflow: hidden;
}

.img-card img {
  width: 100%;
  height: 200px;
  object-fit: cover;
  transition: all .25s ease;
}

.card-content {
  padding: 15px;
  text-align: left;
}

.card-title {
  margin-top: 0px;
  font-weight: 700;
  font-size: 1.65em;
}

.card-title a {
  color: #000;
  text-decoration: none !important;
}

.card-read-more {
  border-top: 1px solid #D4D4D4;
}

.card-read-more a {
  text-decoration: none !important;
  padding: 10px;
  font-weight: 600;
  text-transform: uppercase
}

.sticky-container {
  padding: 0px;
  margin: 0px;
  position: fixed;
  right: -130px;
  top: 230px;
  width: 210px;
  z-index: 1100;
}

.sticky li {
  list-style-type: none;
  background-color: black;
  color: white;
  height: 43px;
  padding: 0px;
  margin: 0px 0px 1px 0px;
  -webkit-transition: all 0.25s ease-in-out;
  -moz-transition: all 0.25s ease-in-out;
  -o-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  cursor: pointer;
}

.sticky li:hover {
  margin-left: -115px;
}

.sticky li img {
  float: left;
  margin: 5px 4px;
  margin-right: 5px;
}

.sticky li p {
  padding-top: 5px;
  margin: 0px;
  line-height: 16px;
  font-size: 11px;
}

.sticky li p a {
  text-decoration: none;
  color: white;
}

.sticky li p a:hover {
  text-decoration: underline;
}

#me {
  padding-left: 30px;
}
.webmadewell {
  background-color: white;
}

.ryan {
opacity: 0.5;
}

body {
  margin: 0;
}

h1 {
  font-weight: 500;
}
h2 {
  font-weight: 400;
  color: white;
}
.sample-section-wrap {
  margin-top: 300px;
  background-color: rgb(32, 32, 32);
  color: white;
}
.sample-section {
  max-width: 640px;
  margin-left: auto;
  margin-right: auto;
  padding: 40px;
}

.pdf {
  display: flex;
  justify-content: center;
  padding-bottom: 50px;
  padding-top: 50px;
}

.scrollspy-example {
  position: relative;
  height: 750px;
  overflow: auto;
}

.nav-link {
  color: black;
  padding-left: 80px;
  padding-top: 18px;

}

.sb {
  padding-left: 30px;
}

#spy {
  background-color: #fff;
  background-image:
  linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
  linear-gradient(#eee .1em, transparent .1em);
  background-size: 100% 1.2em;
}  */



* {
  box-sizing: border-box;
  font-family: helvetica;
}

#menu {
  background-color: #ff9170;
}

.starter-template {
  padding: 40px 15px;
  text-align: center;
}

ul.navbar-nav {
  float: right;
  text-align: center;
}

ul.navbar-nav li {
  padding: 0 10px;
}

@media only screen and (max-width:767px) {
  ul.navbar-nav {
    float: none;
    background-color: #ff9170;

  }
}

.container-fluid {
  padding: 0 1em;
}

.navbar-nav li a {
  color: white !important;
  font-size: 1.2em;
  font-family: helvetica;
  font-weight: 600;
  transition: 0.4s ease;
}

.navbar-nav li a:hover {
  color: #fff !important;
  background-color: black !important;
}

.navbar-brand {
  padding: 10px 15px !important;
}

a.navbar-brand .fa-globe {
  font-size: 30px;
  color: black;
  transition: 0.5s ease;
}

a.navbar-brand .fa-globe:hover {
  color: #3935e6;
}

.navbar-inverse .navbar-toggle .icon-bar {
  background-color: black !important;
}

.navbar-inverse .navbar-toggle:hover,
.navbar-inverse .navbar-toggle:focus {
  background-color: #ff9170 !important;
}

.container {
  margin: 0 auto;
  max-width: 996px;
}

.splash {
  background: url("/images/maxresdefault.jpg") repeat center center fixed;
  height: 60%;
  min-height: 60vh;
  background-size: cover;
  color: #fff;
}

.splash .container {
  padding-top: 15vh;
  /* No JS fallback*/
  padding-bottom: 10vh;
  /* No JS fallback*/
}

.profile-image {
  border-radius: 50%;
  display: block;
  max-height: 250px;
  max-width: 250px;
  margin: 0 auto 1em;
  width: 100%;
  opacity: 0.85;
}

.splash h1 {
  font-size: 40px;
  margin-bottom: .15em;
  text-align: center;
}

.splash .lead,
.splash .continue {
  display: inline-block;
  text-align: center;
}

h1.intro-text {
  margin: 0;
  color: #fff;
}

.splash .lead {
  font-size: 30px;
  margin-bottom: 1em;
  font-family: Rockwell;
}

#typed {
  font-family: helvetica;
}

.splash .continue {
  font-size: 3em;
  display: block;
}

.splash .continue a {
  border: 2px solid #fff;
  border-radius: 100%;
  color: #fff;
  display: inline-block;
  text-decoration: none;
  width: 40px;
  height: 40px;
  font-size: 30px;
}

.splash .continue a:hover {
  background-color: rgba(255, 255, 255, .25);
}

#about,
#projects,
#education,
#skills {
  padding-top: 4em !important;
}

section h2 {
  margin: 0;
  font-size: 3em;
}

section.success {
  color: #fff;
  background: rgb(13, 79, 136);
  padding: 2%;
}

section.success a {
  color: black;
  transition: 0.4s ease;
}

section.success a:hover {
  outline: 0;
  color: #fff;
  border: 2px solid #fff;
}

.contact-button {
  padding-bottom: 2%;
}

hr.star-light,
hr.star-portfolio {
  margin: 25px auto 30px;
  padding: 0;
  max-width: 250px;
  border: 0;
  border-top: solid 3px;
  text-align: center;
}

hr.star-light:after,
hr.star-portfolio:after {
  content: "\f005";
  display: inline-block;
  position: relative;
  top: -.8em;
  padding: 0 .25em;
  font-family: FontAwesome;
  font-size: 2em;
}

hr.star-light {
  border-color: #fff;
}

hr.star-portfolio {
  border-color: black;
}

hr.star-portfolio:after {
  color: black;
  background-color: #eee;
}

hr.star-light:after {
  color: #fff;
  background-color: white;
}

p.content-text {
  font-size: 25px;
}

/* PORTFOLIO */
.portfolio-card {
  box-shadow: 0px 2px 5px #888888;
  background: #eee;
  border-radius: 4px;

}

.portfolio-card:hover {
  box-shadow: 0px 10px 10px #888888;
  cursor: pointer
}

.portfolio-container-holder {
  background: #eee;
  padding-bottom: 20px;
}


.portfolio-card-holder {
  padding: 5px;
  margin-bottom: 5px;
}

.portfolio-img {
  width: 100%;
  border-radius: 4px 4px 0 0;
}

.portfolio-img-desc {
  position: relative;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: #fff;
  color: #000;
  text-align: center;
  padding: 5px;
}

/* Contact */
.contact-me-container {
  padding: 3%;
  background: rgb(13, 79, 136);
}

.fa-user,
.fa-at,
.fa-phone {
  color: black;
}

.submit-button {
  margin-top: 10px;
  margin-bottom: 10px;
}

/* ========================
Footer
======================== */

footer {
  background-color: #2C3E50;
  color: #fff;
  font-size: 1.5em;
  text-align: center;
  padding: 3%;
}

a.tel,
a.tel:hover {
  text-decoration: none;
  color: #fff;
}

a.social-button {
  background: #fff;
  font-size: 20px;
  border-radius: 50%;
  margin: 5px;
}

.address-container {
  display: inline-block;
  margin: 0 auto;
}

a.link-facebook,
a.link-twitter,
a.link-codepen,
a.link-linkedin,
a.link-instagram {
  transition: 0.4s ease;
}

a.link-twitter {
  color: #1DA1F2;
}

a.link-facebook {
  color: #3b5998;
}

a.link-linkedin {
  color: #007bb6;
}

a.link-instagram {
  color: #e95950;
}

a.link-facebook:hover {
  background-color: #3b5998;
  color: #fff;
}

a.link-twitter:hover {
  background-color: #1DA1F2;
  color: #fff;
}

a.link-linkedin:hover {
  background-color: #007bb6;
  color: #fff;
}

a.link-github:hover {
  background-color: black;
  color: #fff;
}

.btn-default {
  color: #333;
  background-color: #fff;
  border-color: transparent !important;
}

.fa-heart {
  color: #f32323;
}

h4.author {
  letter-spacing: 4px;
}

hr.footer-hr {
  width: 150px;
}

hr.copyright {
  opacity: 0.4;
}

.btn {
  margin-bottom: 5px;
  margin-left: 5px;
}

.card-text {
  margin-top: 5px;
  margin-left: 5px;
}


#skills span {
  top: -30px;
  left: 2%;
  position: relative;
  font-size: 1.4em;
  font-weight: bolder;
  font-family: monospace;
  color: #fff;
}

progress {
  background-color: black;
  border: 0;
  height: 2.5em;
  width: 100%;
}

progress::-webkit-progress-bar {
  background-color: white;
}

progress::-webkit-progress-value {
  background-color: #2b3e50;
}

.skills {
  display: flex;
  align-items: center;
  justify-content: center;

}

#skills {
  background-color: #ff9170;
}

.card {
  color: white;
}

.mail {
  color: white;
}

